--- a/package.json
+++ b/package.json
@@ -27,9 +27,9 @@
     "body-parser": "^1.18.3",
     "core-js": "^2.5.4",
     "express": "^4.16.3",
-    "jsonwebtoken": "^8.4.0",
+    "jsonwebtoken": "^8.2.1",
     "mongoose": "^5.1.2",
-    "mongoose-unique-validator": "^2.0.2",
+    "mongoose-unique-validator": "^2.0.1",
     "multer": "^1.3.0",
     "rxjs": "^6.0.0",
     "zone.js": "^0.8.26"
@@ -45,7 +45,7 @@
     "codelyzer": "~4.2.1",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~1.7.1",
+    "karma": "^4.0.0",
     "karma-chrome-launcher": "~2.2.0",
     "karma-coverage-istanbul-reporter": "~1.4.2",
     "karma-jasmine": "~1.1.1",
